Fix: hide body overflow

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 
 body {
+    overflow-x: hidden;
     width: 1600px;
     margin: 0;
     font-family: 'Roboto', sans-serif;
